集成redis
redis，lettuce，redis工具类