@@ -1,31 +1,33 @@
 package com.yida.utils.base;
 
-import sun.misc.BASE64Encoder;
-
 import java.io.UnsupportedEncodingException;
-import java.security.MessageDigest;
 import java.security.NoSuchAlgorithmException;
+import java.util.Base64;
+import java.util.Base64.Encoder;
 
 /**
  * @author si_chan
  * @date 2019-06-28
  **/
 public class Md5 {
-    /**利用MD5进行加密*/
+    /**
+     * 利用MD5进行加密
+     */
     public String EncoderByMd5(String str) throws NoSuchAlgorithmException, UnsupportedEncodingException {
-        //确定计算方法
-        MessageDigest md5=MessageDigest.getInstance("MD5");
-        BASE64Encoder base64en = new BASE64Encoder();
-        //加密后的字符串
-        String newstr=base64en.encode(md5.digest(str.getBytes("utf-8")));
+        byte[] inByte = str.getBytes("UTF-8");
+        Encoder encoder = Base64.getEncoder();
+        //加密字符串
+        String newstr = encoder.encodeToString(inByte);
         return newstr;
     }
 
-    /**判断用户密码是否正确
-     *newpasswd 用户输入的密码
-     *oldpasswd 正确密码*/
-    public boolean checkpassword(String newpasswd,String oldpasswd) throws NoSuchAlgorithmException, UnsupportedEncodingException{
-        if(EncoderByMd5(newpasswd).equals(oldpasswd))
+    /**
+     * 判断用户密码是否正确
+     * newpasswd 用户输入的密码
+     * oldpasswd 正确密码
+     */
+    public boolean checkpassword(String newpasswd, String oldpasswd) throws NoSuchAlgorithmException, UnsupportedEncodingException {
+        if (EncoderByMd5(newpasswd).equals(oldpasswd))
             return true;
         else
             return false;
